# blog

./: .Rprofile  .gitignore  .gitmodules  CNAME  README.md  config.toml  wrangler.toml
archetypes/: default.Rmd  default.md
content/: 2019-04-17-netlify-forms.md  about.md  privacy-policy.ja.md
content/drafts/: 2018-09-06-roxygen2-order.Rmd  2018-09-06-s3-in-r.html  2018-10-31-patchwork-magick.Rmd  2018-10-31-patchwork-magick.html
content/post/: .Rprofile  2015-07-23-r-rmarkdown.html  2018-07-05-github-pages-with-rmarkdown.Rmd  2018-07-05-github-pages-with-rmarkdown.html  2018-07-09-xelatexでutf8文字.html  2018-07-09-xelatexでutf8文字.md  2018-07-29-how2mathjax.Rmd  2018-07-29-how2mathjax.html  2018-07-29-how2mathjax.md  2018-07-31-dont-sync-pkg-r3-5.Rmd  2018-07-31-dont-sync-pkg-r3-5.html  2018-07-31-dont-sync-pkg-r3-5.md  2018-07-31-setlocale.Rmd  2018-07-31-setlocale.html  2018-08-06-roxygen-comments.Rmd  2018-08-06-roxygen-comments.html  2018-08-18-rmd-parameterized.Rmd  2018-08-18-rmd-parameterized.html  2018-08-19-time-each-chunk.Rmd  2018-08-19-time-each-chunk.en.Rmd  2018-08-19-time-each-chunk.en.html  2018-08-19-time-each-chunk.html  2018-08-20-docker-memo.Rmd  2018-08-20-docker-memo.html  2018-08-24-missing-value-type.Rmd  2018-08-29-roxygen2matome.Rmd  (+204 more)
content/post/2025/2025-04-16-lang-chain-vertexai-structured-output/assets/demo/: main.py  pyproject.toml
docs/: 404.html  index.html  index.sync-conflict-20190118-204557-CIQ52DH.xml  index.xml  sitemap.xml
i18n/: ja.yaml
static/: _redirects
tbl/: .~lock.roxygen2_rd.csv#  roxygen2_rd.csv  roxygen2_rd.ods
(+1362 files in other folders)
