[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # >=1.76を使うと、`from langchain_google_vertexai import ChatVertexAI `に失敗する
    # langchain-google-vertexaiのバージョンを上げれば解決するが、下記の通り別の問題がある
    "google-cloud-aiplatform[vertexai]==1.75.*",
    "langchain-core==0.2.*",
    # 2系は<=2.0.20を使うとlist of classのstructured outputに失敗する
    # <https://github.com/langchain-ai/langchain-google/issues/659> のリリースで解決
    "langchain-google-vertexai==1.0.*",
]
